--- a/apps/docker-ci.yaml
+++ b/apps/docker-ci.yaml
@@ -26,6 +26,6 @@ deploy:
   environment:
     name: test
   script:
-    - ssh root@$IP_SERVER "docker run --name web_server -d -p 8080:80 nginx"
+    - ssh root@$IP_SERVER "docker run --name my-web -d -p 8080:80 "$URL_REGISTRY:$CI_COMMIT_SHORT_SHA""
   only:
     - master
